feat: Adding langage toggle to enable user to switch easily between localizations

--- a/messages.xlf
+++ b/messages.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-  <file source-language="fr-FR" datatype="plaintext" original="ng2.template">
+  <file datatype="plaintext" original="ng2.template">
     <body>
       <trans-unit id="6835247319162710919" datatype="html">
         <source>Développeur</source>
@@ -27,14 +27,14 @@
         <source>Bonjour !</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
-          <context context-type="linenumber">41</context>
+          <context context-type="linenumber">42</context>
         </context-group>
       </trans-unit>
       <trans-unit id="4464940653130230444" datatype="html">
         <source>Bienvenu sur mon portfolio !</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
-          <context context-type="linenumber">45</context>
+          <context context-type="linenumber">46</context>
         </context-group>
       </trans-unit>
       <trans-unit id="5795361399486311408" datatype="html">
@@ -42,14 +42,14 @@
         class=&quot;colored-text&quot;&gt;"/>parcours scolaire<x id="CLOSE_TAG_SPAN" ctype="x-span" equiv-text="&lt;/span&gt;"/></source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
-          <context context-type="linenumber">49,50</context>
+          <context context-type="linenumber">50,51</context>
         </context-group>
       </trans-unit>
       <trans-unit id="8408565907353903766" datatype="html">
         <source>N&apos;hésitez pas à utiliser le <x id="START_TAG_SPAN" ctype="x-span" equiv-text="&lt;span class=&quot;colored-text blue&quot;&gt;"/>chatbot<x id="CLOSE_TAG_SPAN" ctype="x-span" equiv-text="&lt;/span&gt;"/> en bas à droite pour obtenir mes coordonnées et des <x id="START_TAG_SPAN_1" ctype="x-span_1" equiv-text="&lt;span class=&quot;colored-text&quot;&gt;"/>informations supplémentaires<x id="CLOSE_TAG_SPAN" ctype="x-span" equiv-text="&lt;/span&gt;"/> sur mon profil</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/app.component.html</context>
-          <context context-type="linenumber">54,55</context>
+          <context context-type="linenumber">55,56</context>
         </context-group>
       </trans-unit>
       <trans-unit id="6111591081032972915" datatype="html">
@@ -127,6 +127,27 @@
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/body/header/header.component.ts</context>
           <context context-type="linenumber">13</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="1949800099101277248" datatype="html">
+        <source>Languages</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/body/langage-toggle/langage-toggle.component.html</context>
+          <context context-type="linenumber">9</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="4134147244760971282" datatype="html">
+        <source>Français</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/body/langage-toggle/langage-toggle.component.html</context>
+          <context context-type="linenumber">14</context>
+        </context-group>
+      </trans-unit>
+      <trans-unit id="2479039440687873737" datatype="html">
+        <source>Anglais</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/body/langage-toggle/langage-toggle.component.html</context>
+          <context context-type="linenumber">18</context>
         </context-group>
       </trans-unit>
       <trans-unit id="4156776965937613801" datatype="html">
